--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -8,40 +8,57 @@ on:
 jobs:
   android:
     runs-on: ubuntu-latest
+    timeout-minutes: 60
 
     steps:
     - uses: actions/checkout@v4
 
+    # ---------- NODE ----------
     - uses: actions/setup-node@v4
       with:
         node-version: 20
 
+    # ---------- JAVA ----------
     - uses: actions/setup-java@v4
       with:
         distribution: temurin
         java-version: 17
 
-    - name: Install dependencies
+    # ---------- ANDROID SDK ----------
+    - name: Setup Android SDK
+      uses: android-actions/setup-android@v3
+
+    # ---------- INSTALL ----------
+    - name: Install JS deps
       run: npm install --legacy-peer-deps --no-audit --no-fund
 
-    - name: Grant gradlew permission
+    # ---------- GRADLE ----------
+    - name: Make gradlew executable
       run: chmod +x android/gradlew
 
+    # ---------- KEYSTORE ----------
     - name: Decode keystore
       run: |
         echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 --decode > android/app/release.keystore
 
-    - name: Export signing vars
+    - name: Export signing env
       run: |
         echo "KEYSTORE_PASSWORD=${{ secrets.KEYSTORE_PASSWORD }}" >> $GITHUB_ENV
         echo "KEY_ALIAS=${{ secrets.KEY_ALIAS }}" >> $GITHUB_ENV
         echo "KEY_PASSWORD=${{ secrets.KEY_PASSWORD }}" >> $GITHUB_ENV
 
-    🚨 REQUIRED BUILD STEP
-    - name: Build APK
+    # ---------- BUILD ----------
+    - name: Build Android Release APK
       working-directory: android
-      run: ./gradlew assembleRelease --no-daemon
+      run: |
+        echo "ANDROID_HOME=$ANDROID_HOME"
+        ./gradlew assembleRelease --no-daemon --stacktrace
 
+    # ---------- VERIFY ----------
+    - name: List outputs
+      run: find android/app/build/outputs -type f
+
+    # ---------- UPLOAD ----------
     - name: Upload APK
       uses: actions/upload-artifact@v4
       with:
