--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -13,52 +13,40 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    # ---------- NODE ----------
     - uses: actions/setup-node@v4
       with:
         node-version: 20
 
-    # ---------- JAVA ----------
     - uses: actions/setup-java@v4
       with:
         distribution: temurin
         java-version: 17
 
-    # ---------- ANDROID SDK ----------
-    - name: Setup Android SDK
-      uses: android-actions/setup-android@v3
+    - uses: android-actions/setup-android@v3
 
-    # ---------- INSTALL ----------
-    - name: Install JS deps
+    - name: Install JS dependencies
       run: npm install --legacy-peer-deps --no-audit --no-fund
 
-    # ---------- GRADLE ----------
-    - name: Make gradlew executable
+    - name: Grant Gradle permission
       run: chmod +x android/gradlew
 
-    # ---------- KEYSTORE ----------
     - name: Decode keystore
-      run: |
-        echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 --decode > android/app/release.keystore
+      run: echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 --decode > android/app/release.keystore
 
-    - name: Export signing env
+    - name: Export signing variables
       run: |
         echo "KEYSTORE_PASSWORD=${{ secrets.KEYSTORE_PASSWORD }}" >> $GITHUB_ENV
         echo "KEY_ALIAS=${{ secrets.KEY_ALIAS }}" >> $GITHUB_ENV
         echo "KEY_PASSWORD=${{ secrets.KEY_PASSWORD }}" >> $GITHUB_ENV
 
-    # ---------- BUILD ----------
-    - name: Build Android Release APK
+    🚨 DO NOT REMOVE THIS STEP
+    - name: Build Android APK
       working-directory: android
-      run: |
-        echo "ANDROID_HOME=$ANDROID_HOME"
-        ./gradlew assembleRelease --no-daemon --stacktrace
+      run: ./gradlew assembleRelease --no-daemon --stacktrace
 
-    # ---------- VERIFY ----------
-    - name: List outputs
+    - name: List build outputs
       run: find android/app/build/outputs -type f
 
-    # ---------- UPLOAD ----------
     - name: Upload APK
       uses: actions/upload-artifact@v4
       with:
