--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -2,56 +2,77 @@ name: Build Signed Android APK
 
 on:
   push:
-    branches: [ main ]
+    branches: [ "main" ]
   workflow_dispatch:
 
 jobs:
-  android:
+  build:
     runs-on: ubuntu-latest
     timeout-minutes: 60
 
     steps:
-      - name: Checkout repository
+      # 1. Checkout code
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup Node
+      # 2. Setup Node
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 20
 
+      # 3. Setup Java
       - name: Setup Java
         uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: 17
 
+      # 4. Install Android SDK
       - name: Setup Android SDK
         uses: android-actions/setup-android@v3
+        with:
+          api-level: 33
+          build-tools: "33.0.2"
 
-      - name: Install dependencies
+      # 5. Install JS dependencies
+      - name: Install npm dependencies
         run: npm install --legacy-peer-deps --no-audit --no-fund
 
-      - name: Make gradlew executable
+      # 6. Make gradlew executable
+      - name: Make Gradle executable
         run: chmod +x android/gradlew
 
-      - name: Decode keystore
-        run: echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 --decode > android/app/release.keystore
+      # 7. Decode keystore
+      - name: Decode release keystore
+        run: |
+          echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 --decode > android/app/release.keystore
 
-      - name: Export signing env vars
+      # 8. Export keystore environment variables
+      - name: Export signing secrets
         run: |
           echo "KEYSTORE_PASSWORD=${{ secrets.KEYSTORE_PASSWORD }}" >> $GITHUB_ENV
           echo "KEY_ALIAS=${{ secrets.KEY_ALIAS }}" >> $GITHUB_ENV
           echo "KEY_PASSWORD=${{ secrets.KEY_PASSWORD }}" >> $GITHUB_ENV
 
-      - name: Build APK
+      # 9. Build APK
+      - name: Build release APK
         working-directory: android
-        run: ./gradlew assembleRelease --no-daemon --stacktrace
+        run: |
+          ./gradlew assembleRelease --no-daemon --stacktrace
 
-      - name: List outputs
-        run: find android/app/build/outputs -type f
+      # 10. List outputs (debug)
+      - name: Show build outputs
+        run: |
+          if [ -d android/app/build/outputs ]; then
+            find android/app/build/outputs -type f
+          else
+            echo "No outputs directory found"
+          fi
 
-      - name: Upload APK
+      # 11. Upload the signed APK
+      - name: Upload APK artifact
         uses: actions/upload-artifact@v4
         with:
-          name: signed-apk
+          name: signed-release-apk
           path: android/app/build/outputs/apk/release/app-release.apk
