--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -12,17 +12,15 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Setup Node
-        uses: actions/setup-node@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: npm
 
-      - name: Install dependencies
+      - name: Install JS dependencies
         run: npm install --legacy-peer-deps --no-audit --no-fund
 
-      - name: Setup Java
-        uses: actions/setup-java@v4
+      - uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: 17
@@ -41,15 +39,12 @@ jobs:
           echo "KEY_ALIAS=${{ secrets.KEY_ALIAS }}" >> $GITHUB_ENV
           echo "KEY_PASSWORD=${{ secrets.KEY_PASSWORD }}" >> $GITHUB_ENV
 
-      # 🔥 THIS WAS MISSING — APK IS BUILT HERE
       - name: Build Release APK
         working-directory: android
         run: ./gradlew :app:assembleRelease --no-daemon --stacktrace
 
       - name: Verify APK
-        run: |
-          find android -type f -name "*.apk"
-          test -f android/app/build/outputs/apk/release/app-release.apk
+        run: test -f android/app/build/outputs/apk/release/app-release.apk
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
