--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -2,73 +2,53 @@ name: Build Signed Android APK
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ main ]
   workflow_dispatch:
 
 jobs:
-  build:
+  android:
     runs-on: ubuntu-latest
+    timeout-minutes: 60
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+    - uses: actions/checkout@v4
 
-      # ---------------------------
-      # Node 20 (MANDATORY)
-      # ---------------------------
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
-          cache: npm
+    - uses: actions/setup-node@v4
+      with:
+        node-version: 20
 
-      - name: Install JS dependencies
-        run: npm install --legacy-peer-deps --no-audit --no-fund
+    - uses: actions/setup-java@v4
+      with:
+        distribution: temurin
+        java-version: 17
 
-      # ---------------------------
-      # Java 17
-      # ---------------------------
-      - name: Setup Java
-        uses: actions/setup-java@v4
-        with:
-          distribution: temurin
-          java-version: 17
+    - uses: android-actions/setup-android@v3
 
-      # ---------------------------
-      # Decode keystore
-      # ---------------------------
-      - name: Decode release keystore
-        run: |
-          echo "${{ secrets.RELEASE_KEYSTORE }}" | base64 --decode > android/app/release.keystore
+    - name: Install JS dependencies
+      run: npm install --legacy-peer-deps --no-audit --no-fund
 
-      # ---------------------------
-      # Gradle permissions
-      # ---------------------------
-      - name: Grant Gradle permission
-        run: chmod +x android/gradlew
+    - name: Grant Gradle permission
+      run: chmod +x android/gradlew
 
-      # ---------------------------
-      # BUILD APK (THIS WAS MISSING BEFORE)
-      # ---------------------------
-      - name: Build signed APK
-        working-directory: android
-        run: |
-          ./gradlew clean
-          ./gradlew assembleRelease --no-daemon
+    - name: Decode keystore
+      run: echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 --decode > android/app/release.keystore
 
-      # ---------------------------
-      # Verify APK
-      # ---------------------------
-      - name: Verify APK
-        run: |
-          ls -lh android/app/build/outputs/apk/release/
-          test -f android/app/build/outputs/apk/release/app-release.apk
+    - name: Export signing variables
+      run: |
+        echo "KEYSTORE_PASSWORD=${{ secrets.KEYSTORE_PASSWORD }}" >> $GITHUB_ENV
+        echo "KEY_ALIAS=${{ secrets.KEY_ALIAS }}" >> $GITHUB_ENV
+        echo "KEY_PASSWORD=${{ secrets.KEY_PASSWORD }}" >> $GITHUB_ENV
 
-      # ---------------------------
-      # Upload APK
-      # ---------------------------
-      - name: Upload APK
-        uses: actions/upload-artifact@v4
-        with:
-          name: qaramurt-rider-release-apk
-          path: android/app/build/outputs/apk/release/app-release.apk
+    🚨 DO NOT REMOVE THIS STEP
+    - name: Build Android APK
+      working-directory: android
+      run: ./gradlew assembleRelease --no-daemon --stacktrace
+
+    - name: List build outputs
+      run: find android/app/build/outputs -type f
+
+    - name: Upload APK
+      uses: actions/upload-artifact@v4
+      with:
+        name: signed-apk
+        path: android/app/build/outputs/apk/release/app-release.apk
