--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -2,53 +2,45 @@ name: Build Signed Android APK
 
 on:
   push:
-    branches: [ main ]
+    branches: [ "main" ]
   workflow_dispatch:
 
 jobs:
-  android:
+  build:
     runs-on: ubuntu-latest
-    timeout-minutes: 60
 
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - uses: actions/setup-node@v4
-      with:
-        node-version: 20
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
 
-    - uses: actions/setup-java@v4
-      with:
-        distribution: temurin
-        java-version: 17
+      - name: Install JS deps
+        run: npm install --legacy-peer-deps --no-audit --no-fund
 
-    - uses: android-actions/setup-android@v3
+      - name: Setup Java
+        uses: actions/setup-java@v4
+        with:
+          distribution: temurin
+          java-version: 17
 
-    - name: Install JS dependencies
-      run: npm install --legacy-peer-deps --no-audit --no-fund
+      - name: Decode keystore
+        shell: bash
+        run: |
+          mkdir -p android/app
+          echo "${{ secrets.RELEASE_KEYSTORE }}" | base64 --decode > android/app/release.keystore
 
-    - name: Grant Gradle permission
-      run: chmod +x android/gradlew
+      - name: Grant gradlew permission
+        run: chmod +x android/gradlew
 
-    - name: Decode keystore
-      run: echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 --decode > android/app/release.keystore
+      - name: Build APK
+        working-directory: android
+        run: ./gradlew assembleRelease --no-daemon --stacktrace
 
-    - name: Export signing variables
-      run: |
-        echo "KEYSTORE_PASSWORD=${{ secrets.KEYSTORE_PASSWORD }}" >> $GITHUB_ENV
-        echo "KEY_ALIAS=${{ secrets.KEY_ALIAS }}" >> $GITHUB_ENV
-        echo "KEY_PASSWORD=${{ secrets.KEY_PASSWORD }}" >> $GITHUB_ENV
-
-    🚨 DO NOT REMOVE THIS STEP
-    - name: Build Android APK
-      working-directory: android
-      run: ./gradlew assembleRelease --no-daemon --stacktrace
-
-    - name: List build outputs
-      run: find android/app/build/outputs -type f
-
-    - name: Upload APK
-      uses: actions/upload-artifact@v4
-      with:
-        name: signed-apk
-        path: android/app/build/outputs/apk/release/app-release.apk
+      - name: Upload APK
+        uses: actions/upload-artifact@v4
+        with:
+          name: app-release
+          path: android/app/build/outputs/apk/release/app-release.apk
