--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,57 +1,146 @@
-name: Build Signed Android APK
+apply plugin: "com.android.application"
+apply plugin: "org.jetbrains.kotlin.android"
+apply plugin: "com.facebook.react"
+apply plugin: "com.google.gms.google-services"
 
-on:
-  push:
-    branches: [ main ]
-  workflow_dispatch:
+/**
+ * React Native configuration
+ */
+react {
+    // Keep old architecture to avoid Fabric/New Arch + NDK issues in older templates
+    newArchEnabled = false
+    
+    autolinkLibrariesWithApp()
+}
 
-jobs:
-  build:
-    runs-on: ubuntu-latest
+def enableProguardInReleaseBuilds = true  // RECOMMENDED: Enable for smaller APK + obfuscation
+def jscFlavor = "org.webkit:android-jsc:+"
 
-    steps:
-      - uses: actions/checkout@v4
+android {
+    // Critical: Forces use of stable NDK version (bypasses mismatches)
+    ndkVersion "26.1.10909125"
 
-      - name: Setup Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
-          cache: npm
+    namespace "com.qaramurttaxi"
+    compileSdk 35
+    buildToolsVersion "35.0.0"  // Optional but safe to keep
 
-      - name: Install dependencies
-        run: npm install --legacy-peer-deps --no-audit --no-fund
+    defaultConfig {
+        applicationId "com.qaramurttaxi"
+        minSdkVersion 24          // Google Play requires at least 24 now
+        targetSdkVersion 35
+        versionCode 1
+        versionName "2.0.0"
+        multiDexEnabled true
 
-      - name: Setup Java
-        uses: actions/setup-java@v4
-        with:
-          distribution: temurin
-          java-version: 17
+        // Optional: Improve build performance
+        vectorDrawables {
+            useSupportLibrary true
+        }
+    }
 
-      - name: Make gradlew executable
-        run: chmod +x android/gradlew
+    signingConfigs {
+        debug {
+            storeFile file("debug.keystore")
+            storePassword "android"
+            keyAlias "androiddebugkey"
+            keyPassword "android"
+        }
 
-      - name: Restore keystore
-        run: |
-          echo "${{ secrets.ANDROID_KEYSTORE_BASE64 }}" | base64 --decode > android/app/release.keystore
+        release {
+            // Use environment variables for security (recommended)
+            if (System.getenv("KEYSTORE_PATH") &&
+                System.getenv("STORE_PASSWORD") &&
+                System.getenv("KEY_ALIAS") &&
+                System.getenv("KEY_PASSWORD")) {
+                storeFile file(System.getenv("KEYSTORE_PATH"))
+                storePassword System.getenv("STORE_PASSWORD")
+                keyAlias System.getenv("KEY_ALIAS")
+                keyPassword System.getenv("KEY_PASSWORD")
+            } else {
+                // Fallback to debug for local testing
+                storeFile file("debug.keystore")
+                storePassword "android"
+                keyAlias "androiddebugkey"
+                keyPassword "android"
+            }
+        }
+    }
 
-      - name: Export signing vars
-        run: |
-          echo "KEYSTORE_PATH=android/app/release.keystore" >> $GITHUB_ENV
-          echo "KEYSTORE_PASSWORD=${{ secrets.KEYSTORE_PASSWORD }}" >> $GITHUB_ENV
-          echo "KEY_ALIAS=${{ secrets.KEY_ALIAS }}" >> $GITHUB_ENV
-          echo "KEY_PASSWORD=${{ secrets.KEY_PASSWORD }}" >> $GITHUB_ENV
+    buildTypes {
+        debug {
+            signingConfig signingConfigs.debug
+            // Optional: Add debuggable true if needed
+        }
 
-      - name: Build Release APK
-        working-directory: android
-        run: ./gradlew assembleRelease --no-daemon --stacktrace
+        release {
+            signingConfig signingConfigs.release
 
-      - name: Verify APK
-        run: |
-          find android -type f -name "*.apk"
-          test -f android/app/build/outputs/apk/release/app-release.apk
+            // Enable shrinking, obfuscation, and optimization
+            minifyEnabled enableProguardInReleaseBuilds
+            shrinkResources enableProguardInReleaseBuilds
+            proguardFiles getDefaultProguardFile("proguard-android-optimize.txt"), "proguard-rules.pro"
 
-      - name: Upload APK
-        uses: actions/upload-artifact@v4
-        with:
-          name: signed-release-apk
-          path: android/app/build/outputs/apk/release/app-release.apk
+            // Improves release build performance
+            isCrunchPngs = true
+        }
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
+
+    kotlinOptions {
+        jvmTarget = "17"
+    }
+
+    // Fix duplicate file issues and license conflicts
+    packaging {
+        resources {
+            excludes += [
+                "META-INF/LICENSE*",
+                "META-INF/NOTICE*",
+                "META-INF/AL2.0",
+                "META-INF/LGPL2.1",
+                "META-INF/*.kotlin_module",
+                "META-INF/DEPENDENCIES",
+                "META-INF/*.md",
+                "META-INF/*.txt"
+            ]
+        }
+    }
+
+    // Required for newer AGP versions (fixes "namespace" related warnings)
+    buildFeatures {
+        buildConfig true
+    }
+}
+
+dependencies {
+    implementation("com.facebook.react:react-android")
+
+    // Firebase BOM (Bill of Materials) - always use this to avoid version conflicts
+    implementation platform("com.google.firebase:firebase-bom:33.12.0")
+    implementation "com.google.firebase:firebase-analytics-ktx"
+    implementation "com.google.firebase:firebase-auth-ktx"
+    implementation "com.google.firebase:firebase-messaging-ktx"
+    implementation "com.google.firebase:firebase-firestore-ktx"
+
+    implementation "com.google.android.gms:play-services-auth:21.3.0"
+
+    // JSC for better JS performance (optional but good)
+    implementation jscFlavor
+
+    implementation "androidx.multidex:multidex:2.0.1"
+
+    // If you use Google Maps
+    // implementation "com.google.android.gms:play-services-maps:19.0.0"
+    // implementation "com.google.android.gms:play-services-location:21.3.0"
+}
+
+// Disable problematic Reanimated prebuild tasks (common fix for older RN versions on Windows/macOS)
+tasks.whenTaskAdded { task ->
+    if (task.name.contains("reanimated") && task.name.contains("prebuild")) {
+        task.enabled = false
+    }
+}
