--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -26,7 +26,7 @@ jobs:
           distribution: temurin
           java-version: 17
 
-      # 🔥 ANDROID SDK (THIS WAS MISSING)
+      # ✅ REQUIRED for sdkmanager
       - name: Setup Android SDK
         uses: android-actions/setup-android@v3
 
@@ -41,7 +41,6 @@ jobs:
 
       - name: Decode keystore
         run: |
-          mkdir -p android/app
           echo "${{ secrets.ANDROID_KEYSTORE_BASE64 }}" | base64 --decode > android/app/release.keystore
 
       - name: Export signing vars
@@ -54,18 +53,17 @@ jobs:
       - name: Make gradlew executable
         run: chmod +x android/gradlew
 
+      # 🔥 CRITICAL FIX: RUN INSIDE android/
       - name: Clean project
         working-directory: android
         run: ./gradlew clean
 
-      # 🚀 REAL BUILD (WILL TAKE TIME NOW)
       - name: Build signed APK
         working-directory: android
         run: ./gradlew :app:assembleRelease --no-daemon --stacktrace
 
       - name: Verify APK
         run: |
-          echo "APK output:"
           find android/app/build/outputs -name "*.apk"
 
       - name: Upload APK
