--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -12,6 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      # ---------- NODE ----------
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
@@ -20,25 +21,27 @@ jobs:
       - name: Install JS dependencies
         run: npm install --legacy-peer-deps --no-audit --no-fund
 
+      # ---------- JAVA (CRITICAL) ----------
       - name: Setup Java
         uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: 17
 
-      # ✅ REQUIRED for sdkmanager
+      # ---------- ANDROID SDK ----------
       - name: Setup Android SDK
         uses: android-actions/setup-android@v3
 
       - name: Install Android SDK packages
         run: |
           sdkmanager "platform-tools" \
-                     "platforms;android-35" \
-                     "build-tools;35.0.0"
+                     "platforms;android-34" \
+                     "build-tools;34.0.0"
 
       - name: Accept Android licenses
         run: yes | sdkmanager --licenses
 
+      # ---------- SIGNING ----------
       - name: Decode keystore
         run: |
           echo "${{ secrets.ANDROID_KEYSTORE_BASE64 }}" | base64 --decode > android/app/release.keystore
@@ -50,10 +53,10 @@ jobs:
           echo "KEY_ALIAS=${{ secrets.KEY_ALIAS }}" >> $GITHUB_ENV
           echo "KEY_PASSWORD=${{ secrets.KEY_PASSWORD }}" >> $GITHUB_ENV
 
+      # ---------- GRADLE ----------
       - name: Make gradlew executable
         run: chmod +x android/gradlew
 
-      # 🔥 CRITICAL FIX: RUN INSIDE android/
       - name: Clean project
         working-directory: android
         run: ./gradlew clean
@@ -62,9 +65,9 @@ jobs:
         working-directory: android
         run: ./gradlew :app:assembleRelease --no-daemon --stacktrace
 
+      # ---------- OUTPUT ----------
       - name: Verify APK
-        run: |
-          find android/app/build/outputs -name "*.apk"
+        run: find android/app/build/outputs -name "*.apk"
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
