--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -21,14 +21,14 @@ jobs:
       - name: Install JS dependencies
         run: npm install --legacy-peer-deps --no-audit --no-fund
 
-      # ---------- JAVA (CRITICAL) ----------
+      # ---------- JAVA ----------
       - name: Setup Java
         uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: 17
 
-      # ---------- ANDROID SDK ----------
+      # ---------- ANDROID ----------
       - name: Setup Android SDK
         uses: android-actions/setup-android@v3
 
@@ -46,27 +46,27 @@ jobs:
         run: |
           echo "${{ secrets.ANDROID_KEYSTORE_BASE64 }}" | base64 --decode > android/app/release.keystore
 
-      - name: Export signing vars
+      - name: Export signing variables
         run: |
           echo "KEYSTORE_PATH=release.keystore" >> $GITHUB_ENV
           echo "KEYSTORE_PASSWORD=${{ secrets.KEYSTORE_PASSWORD }}" >> $GITHUB_ENV
           echo "KEY_ALIAS=${{ secrets.KEY_ALIAS }}" >> $GITHUB_ENV
           echo "KEY_PASSWORD=${{ secrets.KEY_PASSWORD }}" >> $GITHUB_ENV
 
-      # ---------- GRADLE ----------
+      # ---------- GRADLE (FIXED) ----------
       - name: Make gradlew executable
         run: chmod +x android/gradlew
 
-      - name: Clean project
+      - name: Clean Android build
         working-directory: android
         run: ./gradlew clean
 
       - name: Build signed APK
         working-directory: android
-        run: ./gradlew :app:assembleRelease --no-daemon --stacktrace
+        run: ./gradlew assembleRelease --no-daemon --stacktrace
 
       # ---------- OUTPUT ----------
-      - name: Verify APK
+      - name: List APK files
         run: find android/app/build/outputs -name "*.apk"
 
       - name: Upload APK
